--- a/platformio.ini
+++ b/platformio.ini
@@ -38,3 +38,17 @@ build_flags =
   ${env.build_flags}
 extra_scripts = 
 	${env.extra_scripts}
+
+; Build settings for the Raspberry Pico original
+[env:raspberrypico]
+platform = https://github.com/maxgerhardt/platform-raspberrypi.git
+board = pico
+framework = arduino
+board_build.core = earlephilhower			; select new core
+board_build.filesystem_size = 0M			; configure filesystem size. Default 0 Mbyte.
+lib_ldf_mode = chain+
+upload_protocol = mbed
+build_flags =
+	${env.build_flags}
+extra_scripts = 
+	${env.extra_scripts}
