--- a/platformio.ini
+++ b/platformio.ini
@@ -52,3 +52,14 @@ build_flags =
 	${env.build_flags}
 extra_scripts = 
 	${env.extra_scripts}
+
+; Build settings for the Arduino Uno R4
+[env:uno_r4]
+platform = renesas-ra
+board = uno_r4_minima
+framework = arduino
+build_flags = 
+	${env.build_flags}
+monitor_speed = 115200
+extra_scripts = 
+	${env.extra_scripts}
