--- a/platformio.ini
+++ b/platformio.ini
@@ -52,3 +52,15 @@ build_flags =
 	${env.build_flags}
 extra_scripts = 
 	${env.extra_scripts}
+
+; Build settings for the Arduino Nano ESP
+[env:nano_esp32]
+platform = https://github.com/platformio/platform-espressif32.git
+;platform = espressif32
+board = arduino_nano_esp32
+framework = arduino
+build_flags =
+	${env.build_flags}
+monitor_speed = 115200
+extra_scripts = 
+	${env.extra_scripts}
