add ESP32-S2 mini

--- a/platformio.ini
+++ b/platformio.ini
@@ -52,3 +52,15 @@ build_flags =
 	${env.build_flags}
 extra_scripts = 
 	${env.extra_scripts}
+
+; Build settings for the ESP32-S2-mini
+[env:esp32_s2_mini]
+platform = espressif32
+board = lolin_s2_mini
+framework = arduino
+build_flags =
+	${env.build_flags}
+;board_build.arduino.memory_type = qio_opi	; required for PSRAM enabled (by board.json file) ??
+;board_build.memory_type = qio_opi			; required for PSRAM enabled (by board.json file) ??
+extra_scripts = 
+	${env.extra_scripts}
